--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock paper scissors</title>
-        <script src="myscripts.js"></script>
+        <script src="myscripts.js" defer></script>
     </head>
     <body>
+        <button class ="paper">paper</button>
+        <button class ="rock">rock</button>
+        <button class ="scissor">scissor</button>
 
+        <div class = "result"></div>
+        <div class = "score"></div>
+        <div class = 'winner'></div>
     </body>
 </html>
